--- a/app/globals.css
+++ b/app/globals.css
@@ -33,11 +33,6 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --color-1: 0 100% 63%;
-    --color-2: 270 100% 63%;
-    --color-3: 210 100% 63%;
-    --color-4: 195 100% 63%;
-    --color-5: 90 100% 63%;
   }
   .dark {
     --background: 240 10% 3.9%;
@@ -64,11 +59,6 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --color-1: 0 100% 63%;
-    --color-2: 270 100% 63%;
-    --color-3: 210 100% 63%;
-    --color-4: 195 100% 63%;
-    --color-5: 90 100% 63%;
   }
 }
 
@@ -77,7 +67,7 @@ body {
     @apply border-border scroll-smooth;
   }
   body {
-    @apply bg-foreground text-foreground scroll-smooth;
+    @apply bg-background text-foreground dark:text-stone-200 scroll-smooth;
   }
   .width-regulator {
     @apply w-full max-w-full md:max-w-4xl xl:max-w-6xl 2xl:max-w-[90rem] mx-auto;
@@ -114,14 +104,5 @@ body {
   }
   .muted {
     @apply text-sm text-muted-foreground;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
